Closed Bug 73254 Opened 24 years ago Closed 24 years ago

images aren't printing full size

Categories

(Core :: Graphics: ImageLib, defect)

x86
Windows NT
defect
Not set
blocker

Tracking

()

VERIFIED FIXED
mozilla0.9

People

(Reporter: sujay, Assigned: pavlov)

References

()

Details

(Whiteboard: [imglib])

Attachments

(1 file)

using 3/23 build of netscape 1) launch netscape 2) jump to http://www.mapquest.com 3) enter driving directions 4) print them out notice the big map below driving directions prints out very small. should be full size... also happens for printing out simple 640x480 GIFS.
Keywords: nsbeta1
added test url
another sample URL: http://www.vinod.com/cj.jpg load it in browser then print.. notice the small size.
Keywords: nsbeta1
test URL added above.
windows only
OS: All → Windows NT
Hardware: All → PC
Blocks: 66967
Whiteboard: [imglib]
*** Bug 75547 has been marked as a duplicate of this bug. ***
The problem occurs with intrinsically sized images (I.E no width or height specified) If a width or height is specified the images print with the correct size. If you print test2.html on WIN32 you will notice that the raptor.jpg is printed at it's intrinsic size. (Which is tiny). If you specify a width and height for the raptor.jpg image element it will print correctly.
*** Bug 75904 has been marked as a duplicate of this bug. ***
Attached patch fix for the bugSplinter Review
the top part of this patch is what really fixes the bug here. the rest of it is mostly just null checks. basically, i have to convert from twips to "scaled" twips so that the image goes through the scaling code when drawing.
r=timeless
Status: NEW → ASSIGNED
Keywords: patch
Target Milestone: --- → mozilla0.9
+ if (intrinsicScaledHeight != 0) { + newHeight = (intrinsicScaledHeight * newWidth) / intrinsicScaledWidth; Shouldn't that be + if (intrinsicScaledWidth != 0) { ^^^^^ ...? Similarly with: + if (intrinsicScaledWidth != 0) { + newWidth = (intrinsicScaledWidth * newHeight) / intrinsicScaledHeight; Is there a bug # for: + // XXX need to handle low image... ...? Fix those, and r=hixie
Keywords: patch
Target Milestone: mozilla0.9 → ---
(fixing mid air collision) Nice to see the reviewers and superreviewers were so thorough. No rubber stamping here. No sir.
Keywords: patch
Target Milestone: --- → mozilla0.9
fixed
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 75425 has been marked as a duplicate of this bug. ***
Verified fixed on Windows NT build 2001041704 Verified fixed on Mac build 2001041704, can't verify on Linux 'cause of bug 75436
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: