fixing printing of images printing them too small.  r=timeless sr=ben.  bug 73254 and 75425.